# trustfall-rustdoc

./: .gitignore  Cargo.toml  README.md
.github/: dependabot.yml
.github/workflows/: add_new_rustdoc_version.yml  ci.yml
crates/generator/: Cargo.toml  README.md
crates/generator/src/: main.rs
scripts/: add_new_rustdoc_version.sh  add_next_rustdoc_version.sh  is_version_already_uploaded.sh  regenerate_templated_code.sh
src/: lib.rs  parser.rs  query.rs  versioned.rs
template/: parser.rs.template  query.rs.template  versioned.rs.template
