[package]
name = "trustfall_rustdoc"
version = "0.34.0"
edition = "2024"
authors = ["Predrag Gruevski <obi1kenobi82@gmail.com>"]
license = "Apache-2.0 OR MIT"
description = "Run Trustfall queries across multiple rustdoc JSON format versions."
repository = "https://github.com/obi1kenobi/trustfall-rustdoc"
readme = "./README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0.143"

# All of the packages below are in our public API,
# so bumping major versions for any of them is a major breaking change.
anyhow = "1.0.99"
cargo_metadata = "0.22.0"
serde = { version = "1.0.219", features = ["derive"] }
thiserror = "2.0.16"
trustfall = "0.8.1"
trustfall_core = "0.8.1"  # Keep to the same version as trustfall.
trustfall-rustdoc-adapter-v45 = { package = "trustfall-rustdoc-adapter", version = ">=45.5.0,<45.6.0", optional = true }
trustfall-rustdoc-adapter-v53 = { package = "trustfall-rustdoc-adapter", version = ">=53.4.0,<53.5.0", optional = true }
trustfall-rustdoc-adapter-v55 = { package = "trustfall-rustdoc-adapter", version = ">=55.2.0,<55.3.0", optional = true }
trustfall-rustdoc-adapter-v56 = { package = "trustfall-rustdoc-adapter", version = ">=56.1.0,<56.2.0", optional = true }

[features]
default = ["v45", "v53", "v55", "v56"]
rayon = [
    "trustfall-rustdoc-adapter-v45?/rayon",
    "trustfall-rustdoc-adapter-v53?/rayon",
    "trustfall-rustdoc-adapter-v55?/rayon",
    "trustfall-rustdoc-adapter-v56?/rayon",
]
rustc-hash = [
    "trustfall-rustdoc-adapter-v45?/rustc-hash",
    "trustfall-rustdoc-adapter-v53?/rustc-hash",
    "trustfall-rustdoc-adapter-v55?/rustc-hash",
    "trustfall-rustdoc-adapter-v56?/rustc-hash",
]
# Keep this list of rustdoc version-specific features at the bottom,
# to ensure our version-updating automation works correctly.
v45 = ["dep:trustfall-rustdoc-adapter-v45"]
v53 = ["dep:trustfall-rustdoc-adapter-v53"]
v55 = ["dep:trustfall-rustdoc-adapter-v55"]
v56 = ["dep:trustfall-rustdoc-adapter-v56"]
